--- a/static/style.css
+++ b/static/style.css
@@ -39,11 +39,13 @@
 
 .mytitle > button:hover {
   border: 4px solid #ff5100;
+  transition: all 0.1s;
 }
 
 .col:hover {
   .card {
-    border: 4px solid #ff7100;
+    border: 2px solid #ff7100;
+    transition: all 0.1s;
   }
 }
 
@@ -52,7 +54,7 @@
   max-width: 500px;
   margin: 20px auto 0px auto;
   padding: 20px;
-  box-shadow: 0px 0px 3px 0px orange;
+  box-shadow: 0px 0px 3px 0px #ff5100;
   display: none;
 }
 
@@ -98,14 +100,26 @@
 }
 
 .card {
-  border: 2px solid orange;
+  border: 2px solid #ff5100;
 }
 
-/* hide detail */
-.card-body {
-  display: none;
+.like-logo {
+  float: right;
+  scale: 150%;
 }
 
-.show-detail .card-body {
-  display: block;
+.like {
+  display: inline
+}
+
+.like .like-logo:hover {
+  scale: 190%;
+  transition: all 0.3s ease-in-out;
+}
+
+.like-num {
+  float: right;
+  color: #9b9b9b;
+  font-size: 0.9rem;
+  margin-right: 5px;
 }
