--- a/static/style.css
+++ b/static/style.css
@@ -41,9 +41,10 @@
   --max-width: 1170px;
   --fixed-width: 620px;
 }
+* { font-family: "Gowun Dodum", sans-serif; }
 
 .mytitle {
-  height: 400px;
+  height: 300px;
   width: 100%;
 
   background-image: linear-gradient(
@@ -51,18 +52,27 @@
       rgba(0, 0, 0, 0.3),
       rgba(0, 0, 0, 0.3)
     ),
-    url("https://mp-seoul-image-production-s3.mangoplate.com/d8e852bf7058841a7a0694af93af1b9a.jpg");
+    url("https://mp-seoul-image-production-s3.mangoplate.com/a4283e5725fb56755b9bbeb8f285d0dc.jpg");
   background-position: center;
   background-size: cover;
 
   color: white;
-  font-size: 2.2rem;
+  font-size: 2rem;
   line-height: 45px;
 
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.modal {
+  background: rgb(0,0,0,0.7);
+}
+
+.modal-dialog {
+  top: 39.5%;
+  margin-top: -50px;
 }
 
 .card-name {
@@ -74,16 +84,11 @@
   height: 50px;
   font-size: 1.313rem;
   border-radius: 80px;
+  border: 1px solid white ;
 
-  background-color: #ff7100;
+  background-color: transparent;
   color: white;
   margin: 30px auto 0 auto;
-  border: 2px solid #ff7100;
-}
-
-.mytitle > button:hover {
-  border: 4px solid #ff5100;
-  transition: all 0.1s;
 }
 
 .col:hover {
@@ -96,10 +101,8 @@
 .mypost {
   width: 95%;
   max-width: 500px;
-  margin: 20px auto 0px auto;
+  margin: 20px auto 15px auto;
   padding: 20px;
-  box-shadow: 0px 0px 3px 0px #ff5100;
-  display: none;
 }
 
 .mybtns {
@@ -110,7 +113,6 @@
 
   margin-top: 20px;
 }
-
 .mybtns > button {
   margin-right: 10px;
 }
